# LwM2MAzureIoTHub

AzureIoTBridge/: .gitignore  AzureIoTBridge.code-workspace  Dockerfile
AzureIoTBridge/Services/: Services.csproj
AzureIoTBridge/Services/Diagnostics/: InsightsLogger.cs  LocalLogger.cs  LogConfig.cs  Logger.cs  Serialization.cs
AzureIoTBridge/Services/Exceptions/: ConflictingResourceException.cs  DeviceIdentityException.cs  DevicePayloadTypeException.cs  ExternalDependencyException.cs  InvalidConfigurationException.cs  InvalidInputException.cs  ResourceNotFoundException.cs
AzureIoTBridge/Services/HTTP/: HttpClient.cs  HttpRequest.cs  HttpRequestOptions.cs  HttpResponse.cs
AzureIoTBridge/Services/Models/: BinaryTelemetryApiModel.cs  LwM2MAdapterModel.cs  LwM2MObjectModel.cs  LwM2MResourceModel.cs  PropertyServiceModel.cs  RegisterApiModel.cs  TelemetryServiceModel.cs  TwinApiModel.cs
AzureIoTBridge/Services/Runtime/: DataHandler.cs  DeviceUptime.cs  IServicesConfig.cs  KeyVault.cs  ServicesConfig.cs
AzureIoTBridge/Services/StorageAdapter/: StorageAdapterClient.cs  ValueApiModel.cs
AzureIoTBridge/Services/VirtualDevice/: BinaryTelemetryMapping.cs  DeviceApiModel.cs  DeviceDictionary.cs  IVirtualDevice.cs  IVirtualDeviceManager.cs  VirtualDevice.cs  VirtualDeviceManager.cs
AzureIoTBridge/WebService/: Program.cs  Startup.cs  WebService.csproj  appsettings.Release.json  appsettings.Staging.json
AzureIoTBridge/WebService.test/: IoTBridge.Test.csproj  IoTBridgeTest.cs
AzureIoTBridge/WebService/Controllers/: DeviceBridgeController.cs
AzureIoTBridge/WebService/LWM2M_Client/: CMakeLists.txt  LWM2M_client_app.cpp
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/: CMakeLists.txt
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/include/: CMakeLists.txt
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/include/LWM2M_Client/: Client.h
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/lib/wakaama/: CMakeLists.txt
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/lib/wakaama/core/: liblwm2m.c  registration.c
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/lib/wakaama/examples/client/: lwm2mclient.c
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/lib/wakaama/examples/lightclient/: lightclient.c  lightclient.cmake  object_device.c  object_security.c
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/lib/wakaama/include/: CMakeLists.txt  connection.h  liblwm2m.h  lightclient.h
AzureIoTBridge/WebService/LWM2M_Client/LWM2M_Client/src/: CMakeLists.txt  Client.cpp
AzureIoTBridge/WebService/Middleware/: ExceptionMiddleware.cs
AzureIoTBridge/WebService/Properties/: launchSettings.json
AzureIoTBridge/WebService/Runtime/: Config.cs  Uptime.cs
AzureIoTBridge/WebService/v1/: Version.cs
AzureIoTBridge/WebService/v1/Controllers/: PropertyController.cs  RegistrationController.cs  TelemetryController.cs  test.json
LwM2MEndpoint/: LwM2MEndpoint.code-workspace
LwM2MEndpoint/lwm2m-endpoint/: .clang-format  .project  pom.xml
LwM2MTestClient/: lwm2mClient.code-workspace
LwM2MTestClient/lwm2m-client/: .project  pom.xml
(+76 files in other folders)
